Fix focus outline overlapping content border

--- a/src/wmnds/components/details/_details.scss
+++ b/src/wmnds/components/details/_details.scss
@@ -1,5 +1,6 @@
 .wmnds-details {
   &__content {
+    margin-top: $size-xs;
     padding: $size-xsm $size-md;
     border-left: 5px solid get-color(secondary, 70);
 
